Added simple layout for page-not-found.component.html Added weather-condition-image Finished weather-per-zip as landing page Finished zipcode and zipcode-form Added weather-location object Added weather service Removed strict from tsconfig.json Fixed warnings

--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -1,1 +1,9 @@
-<p>page-not-found works!</p>
+<div class="container-fluid">
+        <div class="col-md-6">
+            <div class="panel panel-primary">
+                <div class="panel-heading">Page Not Found !</div>
+                <div class="panel-body">
+                </div>
+            </div>
+        </div>
+</div>
