--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <nav>
-  <a routerLink="/zipcode" routerLinkActive="active">Add Zipcode</a>
+  <a routerLink="/weather" routerLinkActive="active">Add Zipcode</a>
 </nav>
 <router-outlet></router-outlet>
