added forecast functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<nav>
-  <a routerLink="/weather" routerLinkActive="active">Add Zipcode</a>
-</nav>
+<div class="container-fluid">
+  <div class="col-md-6">
+    <div class="panel panel-primary">
+      <div class="panel-heading">Angular Certification</div>
+    </div>
+  </div>
+</div>
 <router-outlet></router-outlet>
