--- a/src/app/components/weather-locations/weather-location-info/weather-location-info.component.html
+++ b/src/app/components/weather-locations/weather-location-info/weather-location-info.component.html
@@ -19,7 +19,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 pull-right">
-                        <app-weather-condition-image [iconKey]="weatherLocation.weatherConditionIcon"></app-weather-condition-image>
+                        <app-weather-condition-image [iconKey]="weatherLocation.weatherConditionIcon" [size]="4"></app-weather-condition-image>
                     </div>
                 </div>
             </div>
