--- a/src/app/components/weather-condition-image/weather-condition-image.component.html
+++ b/src/app/components/weather-condition-image/weather-condition-image.component.html
@@ -1,1 +1,1 @@
-<img src="{{'https://www.angulartraining.com/images/weather/' + iconName + '.png'}}"  alt="" class="img-responsive col-md-4 pull-right">
+<img src="{{'https://www.angulartraining.com/images/weather/' + iconName + '.png'}}"  alt="" [ngClass]='"img-responsive col-md-" + size + " pull-right"'>
