played arround with bootstrap layout and css removed some merging artefacts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <div class="container-fluid">
-  <div class="col-md-6">
-    <div class="panel panel-primary">
-      <div class="panel-heading">Angular Certification</div>
+    <div class="row">
+        <div class="col-md-8">
+            <div class="panel panel-primary">
+                <div class="panel-heading">Angular Certification</div>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 <router-outlet></router-outlet>
