--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,2 @@
-/* Add application styles & imports to this file! */
-@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
+@import '~bootstrap/dist/css/bootstrap.min.css';
 
